--- a/vendas.html
+++ b/vendas.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Página Vendas</h1>
+    <p>Vendas = 15000</p>
     <a href="index.html">Voltar para página inicial</a>
 </body>
 </html>
