Atualizada página de perfil

--- a/perfil.html
+++ b/perfil.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Página de perfis</h1>
     <p>Nome de usuários</p>
+    <p>Feed de notícias</p>
+    <p>Post de usuários</p>
     <a href="index.html">Voltar para página inicial</a>
 </body>
 </html>
