--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Página Home</h1>
     <a href="vendas.html">Ir para página de vendas</a>
+    <p><a href="perfil.html">Ir para página de perfil</a></p>
 </body>
 </html>
