--- a/vendas.html
+++ b/vendas.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Página Vendas</h1>
-    <p>Vendas = 15000</p>
+    <p>Vendas de segunda a sexta = 15000</p>
+    <p>Vendas de sábado = 8000</p>
     <a href="index.html">Voltar para página inicial</a>
 </body>
 </html>
