Em vendas acrescentado valor e em index criado a pagina contatos

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>Página Home</h1>
+    <h2>Nós Fazemo a Diferença para você</h2>
     <a href="vendas.html">Ir para página de vendas</a>
     <p><a href="perfil.html">Ir para página de perfil</a></p>
+    <p><a href="Contatos.html">Ir para página de Contatos</a></p>
 </body>
 </html>
