--- a/vendas.html
+++ b/vendas.html
@@ -9,6 +9,7 @@
     <h1>Página Vendas</h1>
     <p>Vendas de segunda a sexta = 15000</p>
     <p>Vendas de sábado = 8000</p>
+    <p>Vendas de fim de ano = 20000</p>
     <a href="index.html">Voltar para página inicial</a>
 </body>
 </html>
